<resources>
    <string name="app_name">Stories App</string>
    <string name="most_beautiful_short_stories">أجمل القصص القصيرة</string>
    <string name="text_size_increase">Text Size Increase</string>
    <string name="search">بحث</string>
    <string name="change_background_color">Change Background Color</string>
    <string name="text_size_decrease">Text Size Decrease</string>
    <string name="temp_string">في البدء كان الكلمة</string>
    <string name="cancel">إلغاء</string>
    <string name="confirm">تأكيد</string>
</resources>