<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:paddingRight="@dimen/default_padding"
        android:hint="@string/search"
        android:textSize="@dimen/text_title_size"
        tools:ignore="RtlHardcoded,RtlSymmetry"
        android:textColor="@color/black"
        android:importantForAutofill="no"
        android:inputType="text" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/searchEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pickBtn"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_weight="1"
        android:backgroundTint="#6A2323"
        android:text="@string/cancel"
        tools:ignore="UnusedAttribute"
        style="?android:attr/buttonBarButtonStyle"
        android:textColor="@color/white"
        android:textSize="@dimen/text_title_size"/>
    <Button
        android:id="@+id/pickBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/searchEditText"
        app:layout_constraintStart_toEndOf="@+id/cancelBtn"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_weight="1"
        android:backgroundTint="@color/black"
        android:text="@string/confirm"
        tools:ignore="UnusedAttribute"
        style="?android:attr/buttonBarButtonStyle"
        android:textColor="@color/white"
        android:textSize="@dimen/text_title_size"/>


</androidx.constraintlayout.widget.ConstraintLayout>