<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/colorView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/white"
        android:text="@string/temp_string"
        android:textSize="@dimen/xlarge_text_size"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:orientation="vertical">

        <include layout="@layout/rgb_item_layout"
            android:id="@+id/redLayout"/>

        <include layout="@layout/rgb_item_layout"
            android:id="@+id/greenLayout"/>

        <include layout="@layout/rgb_item_layout"
            android:id="@+id/blueLayout"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_weight="1"
                android:backgroundTint="#6A2323"
                android:text="@string/cancel"
                tools:ignore="UnusedAttribute"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="@color/white"
                android:textSize="@dimen/text_title_size"/>
            <Button
                android:id="@+id/pickBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:text="@string/confirm"
                tools:ignore="UnusedAttribute"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="@color/white"
                android:textSize="@dimen/text_title_size"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>