<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

        <TextView
            android:id="@+id/titleTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:linksClickable="false"
            android:textAlignment="center"
            android:textColor="#FF0000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Hello World" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/textRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTxtView" />



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#80000000"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="8dp">

        <ImageButton
            android:id="@+id/textSizeIncrease"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:contentDescription="@string/text_size_increase"
            android:src="@drawable/zoom_in_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textSizeDecrease"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/textSizeDecrease"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:contentDescription="@string/text_size_decrease"
            android:src="@drawable/zoom_out_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/changeTextColor"
            app:layout_constraintStart_toEndOf="@+id/textSizeIncrease"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/changeTextColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:text="ض"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintEnd_toStartOf="@+id/changeBackgroundColor"
            app:layout_constraintStart_toEndOf="@+id/textSizeDecrease"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/changeBackgroundColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:contentDescription="@string/change_background_color"
            android:src="@drawable/colors_fill_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/search"
            app:layout_constraintStart_toEndOf="@+id/changeTextColor"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:contentDescription="@string/search"
            android:src="@drawable/zoom_out_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/changeBackgroundColor"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
